Updated the pie chart to fetch dynamically from the database!

--- a/amardaan/templates/statistics.html
+++ b/amardaan/templates/statistics.html
@@ -438,37 +438,47 @@ new Chart(ctx, {
   }
 });
 
-const ctx2 = document.getElementById('myChart2');
+{#const ctx2 = document.getElementById('myChart2');#}
 
-new Chart(ctx2, {
-  type: 'doughnut',
-  data: {
-    datasets: [{
-      label: 'Overall Spending',
-      data: [8000, 2130, 1510, 2245, 4385, 1000],
-      borderRadius: 5,
-      cutout: 80,
-      backgroundColor: [
-        'rgb(235, 124, 166)',
-        'rgb(255, 172, 200)',
-        'rgb(204, 111, 248)',
-        'rgb(124, 92, 252)',
-        'rgb(92, 175, 252)',
-        'rgb(161, 169, 254)'
-      ],
-      hoverOffset: 4,
-      spacing: 8
-    }]
-  },
-  options: {
-    plugins: {
-      legend: {
-        display: false
-      }
-    }
-  }
-});
 
+
+</script>
+<script>
+    var ctx2 = document.getElementById('myChart2');
+
+    // Fetch all the camp_fund_raised values from the database
+    var fundRaisedValues = {{ session.get('fund_raised_values') | tojson | safe }};
+
+    var chartConfig = {
+        type: 'doughnut',
+        data: {
+            datasets: [{
+                label: 'Overall Spending',
+                data: fundRaisedValues,
+                borderRadius: 5,
+                cutout: 80,
+                backgroundColor: [
+                    'rgb(235, 124, 166)',
+                    'rgb(255, 172, 200)',
+                    'rgb(204, 111, 248)',
+                    'rgb(124, 92, 252)',
+                    'rgb(92, 175, 252)',
+                    'rgb(161, 169, 254)'
+                ],
+                hoverOffset: 4,
+                spacing: 8
+            }]
+        },
+        options: {
+            plugins: {
+                legend: {
+                    display: false
+                }
+            }
+        }
+    };
+
+    new Chart(ctx2, chartConfig);
 </script>
 </body>
 </html>
