--- a/AmarDaan/templates/index.html
+++ b/AmarDaan/templates/index.html
@@ -49,7 +49,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="success-story">
-                    <img src="{{url_for('static', filename='images/header-img-1.jpg')}}" alt="Success Image" class="success-image">
+                    <img src="{{url_for('static', filename='images/header-imgs.jpg')}}" alt="Success Image" class="success-image">
                     <div>
                         <h1>Rabeya's Journey: A Life Transformed with AmarDaan's Help</h1>
                         <p>Meet Rabeya, a determined girl from a village filled with hardships. Limited resources made education a distant dream. But, thanks to AmarDaan's compassionate donors, Rabeya's life took a remarkable turn.
