--- a/AmarDaan/static/css/style.css
+++ b/AmarDaan/static/css/style.css
@@ -566,7 +566,16 @@ transition: all 250ms ease-in-out 0s;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   transition: 0.2s;
 }
-
+.product_card__btn1 {
+    margin-top: 15px;
+    margin-left: 15px;
+  padding: 10px 30px;
+  background-color: #7C5CFC;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+}
 .product_card__btn:active {
   transform: scale(0.8);
 
