--- a/AmarDaan/templates/edit_campaigns.html
+++ b/AmarDaan/templates/edit_campaigns.html
@@ -24,27 +24,38 @@
                 <tbody>
                     {% for campaign in campaigns %}
                         <tr>
-                            <th scope="row">{{ loop.index }}</th>
-                            <td>{{ campaign.id }}</td>
-                            <td>{{ campaign.camp_name }}</td>
-                            <td>{{ campaign.camp_owner if campaign.camp_owner else 'N/A' }}</td>
-                            <td>{{ campaign.camp_goal }}</td>
-                            <td>{{ campaign.camp_fund_raised }}</td>
-                            <td>{{ campaign.camp_status }}</td>
-                            <td>{{ campaign.date.strftime('%Y-%m-%d %H:%M:%S') }}</td>
-                            <td>{{ campaign.camp_deadline }}</td>
-                            {% if user.id == 1 %}
-                                <td class="text-right">
+                            {% if campaign.user_id == user.id %}
+                                <th scope="row">{{ loop.index }}</th>
+                                <td>{{ campaign.id }}</td>
+                                <td>{{ campaign.camp_name }}</td>
+                                <td>{{ campaign.camp_owner if campaign.camp_owner else 'N/A' }}</td>
+                                <td>{{ campaign.camp_goal }}</td>
+                                <td>{{ campaign.camp_fund_raised }}</td>
+                                <td>{{ campaign.camp_status }}</td>
+                                <td>{{ campaign.date.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+                                <td>{{ campaign.camp_deadline }}</td>
+                                                                <td class="text-right">
+                                    <a class="btn btn-danger" href="{{ url_for('views.delete_campaigns', campaign_id=campaign.id) }}" data-toggle="modal" data-target="#delete">Delete</a>
+                                </td>
+                            {% else %}
+                                {% if user.id == 1 %}
+                                <th scope="row">{{ loop.index }}</th>
+                                <td>{{ campaign.id }}</td>
+                                <td>{{ campaign.camp_name }}</td>
+                                <td>{{ campaign.camp_owner if campaign.camp_owner else 'N/A' }}</td>
+                                <td>{{ campaign.camp_goal }}</td>
+                                <td>{{ campaign.camp_fund_raised }}</td>
+                                <td>{{ campaign.camp_status }}</td>
+                                <td>{{ campaign.date.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+                                <td>{{ campaign.camp_deadline }}</td>
+                                    <td class="text-right">
                                     {% if campaign.admin_approve == 0 %}
                                         <a class="btn btn-accept" href="{{ url_for('views.campaign_approve', campaign_id=campaign.id) }}" data-toggle="modal" data-target="#delete">Accept</a>
                                     {% endif %}
                                     <a class="btn btn-danger" href="{{ url_for('views.delete_campaigns', campaign_id=campaign.id) }}" data-toggle="modal" data-target="#delete">Reject</a>
                                 </td>
-                            {% else %}
-                                <td class="text-right">
-                                    <a class="btn btn-danger" href="{{ url_for('views.delete_campaigns', campaign_id=campaign.id) }}" data-toggle="modal" data-target="#delete">Delete</a>
-                                </td>
-                            {% endif %}
+                                {% endif %}
+                        {% endif %}
                         </tr>
                     {% endfor %}
                 </tbody>
