--- a/AmarDaan/templates/wrong_otp.html
+++ b/AmarDaan/templates/wrong_otp.html
@@ -12,21 +12,19 @@
 <body>
     <section class="page_404">
       <div class="container">
-          <div class="row">	
+          <div class="row">
           <div class="col-sm-12 ">
           <div class="col-sm-10 col-sm-offset-1  text-center">
           <div class="four_zero_four_bg">
               <h1 class="text-center "><strong>404</strong></h1>
           </div>
-          
+
           <div class="contant_box_404">
           <h3 class="h2">
-          Look like you're lost
+          Look like you've entered wrong otp!
           </h3>
-          
-          <p>the page you are looking for not available!</p>
-          
-          <a href="{{url_for('views.home')}}" class="link_404">Go to Home</a>
+
+          <a href="{{url_for('auth.signup')}}" class="link_404">Try Again</a>
       </div>
           </div>
           </div>
