--- a/AmarDaan/templates/base.html
+++ b/AmarDaan/templates/base.html
@@ -110,7 +110,7 @@
                       <i class="far fa-envelope-open"></i>
                       <div class="cta-text">
                           <h4>Mail us</h4>
-                          <span>amardaan247@gmail.com</span>
+                          <span><a href="mailto:amardaan247@gmail.com">amardaan247@gmail.com</span>
                       </div>
                   </div>
               </div>
