Minor Changes about amardaan

--- a/AmarDaan/templates/base.html
+++ b/AmarDaan/templates/base.html
@@ -125,6 +125,7 @@
                     </div>
                     <div class="footer-text">
 {#                        <p>Empowering Bangladesh through Online Crowdfunding. Initiating campaigns for effective change. Join us in creating a better future through the simplicity of generosity. Together, we make a difference. Join AmarDaan today.</p>#}
+{#                        <p>Empowering Bangladesh through Online Crowdfunding. Initiating campaigns for effective change. Join us in creating a better future through the simplicity of generosity. Together, we make a difference. Join AmarDaan today.</p>#}
                         <p>{{ settings.about }}</p>
                     </div>
                 </div>
